--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -7,7 +7,7 @@
     app:cardElevation="5dp"
     app:cardCornerRadius="10dp"
     app:contentPadding="10dp"
-    android:layout_height="150dp">
+    android:layout_height="160dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -94,10 +94,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Full House is the Grand prize in any Tambola game played. It means all 15 Numbers of a ticket are cut, striked out"
+                tools:text="Location"
                 android:singleLine="true"
                 android:alpha="0.5"
                 android:id="@+id/description"
+                android:paddingTop="4dp"
                 android:textSize="14sp"
                 android:textColor="@android:color/black"/>
 
@@ -108,33 +109,34 @@
                 android:singleLine="true"
                 android:alpha="0.5"
                 android:id="@+id/time"
-                android:textSize="12sp"
+                android:paddingTop="1dp"
+                android:textSize="13sp"
                 android:textColor="@android:color/black"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="PersonName"
-                android:singleLine="true"
-                android:alpha="0.5"
-                android:id="@+id/person"
-                android:textSize="12sp"
-                android:textColor="@android:color/black"/>
+                <TextView
+                    android:id="@+id/event"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.5"
+                    android:paddingTop="1dp"
+                    android:singleLine="true"
+                    android:textColor="@android:color/black"
+                    android:textSize="13sp"
+                    tools:text="PersonName" />
 
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/black"
-                android:text="COMPLETED"
-                android:textSize="12sp"
                 android:id="@+id/status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:layout_marginTop="10dp"
                 android:paddingLeft="10dp"
+                android:paddingTop="0dp"
                 android:paddingRight="10dp"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp" />
+                android:paddingBottom="5dp"
+                android:text="COMPLETED"
+                android:textColor="@android:color/black"
+                android:textSize="12sp" />
 
         </LinearLayout>
 
