--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,7 +107,7 @@
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
-       android:text="Add Task"
+       android:text="Create Meeting"
        android:drawablePadding="10dp"
        android:paddingTop="10dp"
        android:id="@+id/addTask"
