--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="bg2">#DAF7A6</color>
     <color name="bg3">#F1948A</color>
     <color name="bg4">#B2BABB</color>
+    <color name="bg5">#15D4FF</color>
 </resources>
