--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="bg3">#F1948A</color>
     <color name="bg4">#B2BABB</color>
     <color name="bg5">#15D4FF</color>
+    <color name="bg6">#FFFFFF</color>
 </resources>
