--- a/app/src/main/res/layout/activity_rate_us.xml
+++ b/app/src/main/res/layout/activity_rate_us.xml
@@ -9,29 +9,29 @@
 
     <TextView
         fontPath="fonts/nunito_extra_bold.ttf"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_width="219dp"
+        android:layout_height="79dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_gravity="top|center_horizontal"
-        android:layout_marginStart="150dp"
-        android:layout_marginEnd="149dp"
-        android:layout_marginBottom="637dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="618dp"
         android:text="@string/rate_us"
         android:textColor="@color/colorAccent"
         android:textSize="28sp"
         android:textStyle="bold"
         tools:ignore="MissingPrefix" />
 
+
+
     <TextView
         fontPath="fonts/nunito_extra_bold.ttf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="284dp"
+        android:layout_marginBottom="270dp"
         android:paddingHorizontal="40dp"
-        android:text="Dear User/ Prof, \n\nThank you for using our application. \n\nYou can appreciate our efforts by giving full notes for this project."
+        android:text="@string/big_letter"
         android:textColor="@color/colorAccent"
         android:textSize="28sp"
         android:textStyle="bold"
