--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="12dp"
-        android:text="Alert Preferences"
+        android:text="@string/alert_preferences"
         android:textColor="#000000"
         android:id="@+id/textSettings"
         android:textSize="35dp"
